--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "mongoose": "^4.7.4"
   },
   "devDependencies": {
+    "amqplib": "^0.5.1",
     "async": "^2.1.4",
     "body-parser": "^1.15.2",
     "diff_match_patch": "^0.1.1",
     "express": "^4.14.0",
     "mongoose": "^4.7.4",
-    "mongoose-findorcreate": "^0.1.2"
+    "mongoose-findorcreate": "^0.1.2",
+    "request": "^2.79.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
